--- a/fastcampas/Part9/fastcampus-loan/src/main/resources/application.yaml
+++ b/fastcampas/Part9/fastcampus-loan/src/main/resources/application.yaml
@@ -19,6 +19,11 @@ spring:
     console:
       path: /h2-console
       enabled: true
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      location: c:/Users/User/Study/filetest
 logging.level:
   org.hibernate.SQL: debug
 
