--- a/fastcampas/Part9/fastcampus-loan/build.gradle
+++ b/fastcampas/Part9/fastcampus-loan/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.7'
     id 'io.spring.dependency-management' version '1.1.4'
+//    id 'com.google.cloud.tools.jib' version '3.2.0'
 }
 
 group = 'com.fastcampus.loan'
@@ -20,6 +21,25 @@ configurations {
 repositories {
     mavenCentral()
 }
+
+//jib {
+//    from {
+//        image = 'openjdk:17-jre-slim'
+//    }
+//    to {
+//        image = 'fastcampus-loan'
+//        tags = ['0.0.1']
+//    }
+//    container {
+//        mainClass = 'com.fastcampus.loan.LoanApplication'
+//        creationTime = 'USE_CURRENT_TIMESTAMP'
+//        format = 'OCI'
+//        volumes = ['/var/tmp']
+//        entrypoint = ['java'
+//        , '-cp', 'a/app/resources:/app/classes:/app/libs/*'
+//        , 'com.fastcampus.loan.LoanApplication']
+//    }
+//}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
